[tool.poetry]
name = "workflows-test"
version = "0.1.14"
description = ""
authors = [ "Marcin Gębala <maarcin.gebala@gmail.com>" ]

  [tool.poetry.dependencies]
  python = "^3.9"
  ariadne = "^0.14.1"

  [tool.poetry.dev-dependencies]
  black = "^22.1.0"
  pytest = "^7.1.0"
  mypy = "^0.940"
  isort = "^5.10.1"

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
